# AI-Native-Physical-Book

./: .dockerignore  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  shared-config.js  test_ai_accuracy.py  test_ai_response_time.py  test_e2e.py  test_implementation.py  test_performance.py
backend/: .env.example  .gitignore  1.7.0  Dockerfile  QUERY_ENDPOINT_IMPLEMENTATION.md  README.md  alembic.ini  app.py  pyproject.toml  requirements-compatible.txt  requirements-pydantic2.txt  requirements.txt  test_app.py  test_endpoints.py  test_routing.py
backend/.specify/memory/: constitution.md
backend/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py  security.py
backend/app/api/: __init__.py  ai_assistant.py  content.py  content_models.py  health.py  rag_query.py  search.py  translation.py
backend/app/database/: __init__.py  database.py
backend/app/middleware/: error_handlers.py
backend/app/models/: __init__.py  book_content.py  search_index.py  translation_set.py  user_session.py
backend/app/services/: __init__.py  content_indexing.py  content_service.py  rag_service.py  search_service.py  translation_service.py  vector_db.py
backend/app/utils/: logging_config.py  metrics.py  performance_monitoring.py
backend/specs/002-integrated-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/src/api/: book_router.py  (+6 more)
backend/tests/: test_comprehensive_backend.py  test_quickstart_validation.py
(+141 files in other folders)
